# godot-llama.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  build.bat
glc/: glc.gdextension
src/: conversion.cpp  conversion.hpp  gdllamaholder.cpp  gdllamaholder.h  gdllamanpc.cpp  gdllamanpc.h  godot-llama-runtime.cpp  godot-llama-runtime.hpp  godot-llama.hpp  main.cpp  register_types.cpp
